[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-price-server"
version = "0.1.0"
description = "A simple MCP server that provides stock price information"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Stock Price Server Developer"}
]
dependencies = [
    "mcp-server==0.1.0",
    "yfinance==0.2.36",
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
]

[tool.pytest]
testpaths = ["test_stock_price_server.py"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[project.scripts]
stock-server = "stock_price_server:main"